# torch-optstate

./: .gitignore  README.md  pyproject.toml  results_default_plus_5_warmup_steps.csv
.github/workflows/: publish.yml
benchmarks/: benchmark_comprehensive.py  benchmark_cpu.py  benchmark_gpu.py  benchmark_suite.py  models.py
examples/: finetune_comparison.py  finetune_demo.py
scripts/: profile_cpu.py
src/torch_optstate/: __init__.py  low_memory.py  wrap.py
src/torch_optstate/codecs/: __init__.py  base.py  fp32.py  lowbit.py
src/torch_optstate/core/: state_store.py
src/torch_optstate/policy/: __init__.py  auto.py  simple.py
tests/: test_chunking.py  test_chunking_correctness.py  test_codecs.py  test_correctness.py  test_state_store.py  test_wrapper.py
