[project]
name = "torch-optstate"
version = "0.1.0"
description = "Optimizer state virtualization and compression for PyTorch"
authors = [
    {name = "Vidhu Mathur", email = "vidhumathur2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
]

[tool.poetry.group.dev.dependencies]
numpy = ">=1.24.0"
pytest = ">=8.0.0"
psutil = ">=5.9.0"
pandas = ">=2.0.0"
transformers = ">=4.57.3"
matplotlib = ">=3.10.8"
datasets = ">=4.4.1"


[tool.poetry]
packages = [{include = "torch_optstate", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
